# descriptive-statistics

./: .gitignore  README.md  exemplo.xlsx  pyproject.toml  teste.csv
data/: altura_m_altura_m.csv  cor_preferida_cor_preferida.csv  dados_aleatorios.xlsx.csv  faz_faculdade_faz_faculdade.csv  idade_idade.csv  mes_de_aniversario_mes_de_aniversario.csv  peso_kg_peso_kg.csv
src/: Main.py  main.py
src/Processor/: AData.py  Analysis.py  Factory.py
src/Processor/Classificator/: AClassificator.py  Ordinal.py
src/Processor/Implementations/: CSV.py  XLSX.py
src/analysis/: __init__.py  heuristics.py  statistical_functions.py
src/data_loading/: __init__.py  factory.py  idata_reader.py
src/data_loading/readers/: __init__.py  csv_reader.py  xlsx_reader.py
src/domain/: __init__.py  dataset.py  variable.py
src/domain/variable_types/: __init__.py  binary.py  continuous.py  discrete.py  ivariable_type.py  nominal.py  ordinal.py
src/export/: __init__.py  pdf_generator.py  report_generator.py
src/visualization/: __init__.py  chart_generator.py
