[tool.poetry]
name = "descriptive-statistics"
version = "0.1.0"
description = "Projeto de estatística descritiva"
authors = ["huakson"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
numpy = "^2.3.4"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
scipy = "^1.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
